# mattwoodworks

./: .gitignore  Dockerfile  README.md  netlify.toml  render.yaml
backend/: .env.example  Cargo.toml  Dockerfile
backend/src/: mailer.rs  main.rs  supabase.rs
frontend/: .env.example  .gitignore  dev-api.mjs  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  mhw-lux-v2.css
frontend/src/api/: auth.ts  base.ts  estimates.ts  siteContentApi.ts
frontend/src/components/site/: SiteFooter.tsx  SiteHeader.tsx
frontend/src/context/: AuthContext.tsx  SiteContentContext.tsx
frontend/src/data/: portfolio.ts  siteContent.defaults.ts
frontend/src/lib/: deepMerge.ts  fileBase64.ts
frontend/src/pages/: AdminDashboard.tsx  AdminLayout.tsx  AdminLeadsPage.tsx  AdminPortfolioPage.tsx  AdminSitePage.tsx  HomePage.tsx  LoginPage.tsx
frontend/src/routes/: RequireAdmin.tsx
frontend/src/types/: siteContent.ts
