[package]
name = "mhw-api"
version = "0.1.0"
edition = "2021"
description = "Matthew Harder site API (auth, CMS JSON, uploads, leads)"

[dependencies]
axum = { version = "0.7", features = ["json"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
