[package]
name = "mhw-api"
version = "0.1.0"
edition = "2021"
description = "Matthew Harder site API (auth, CMS JSON, uploads, leads)"

[dependencies]
axum = { version = "0.7", features = ["json"] }
base64 = "0.22"
dotenvy = "0.15"
jsonwebtoken = "9"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "normalize-path"] }
bcrypt = "0.15"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
